--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Pescadores de Buenos Aires</title>
+  <title>Lo de Chimi Pesca</title>
   <link rel="icon" type="image/jpeg" href="/logo-chimi.jpg" />
 </head>
 
